<resources>
    <string name="app_name">Aadab Hyd</string>
    <string name="title_activity_news">NewsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="string_loading">Loading...</string>
    <string name="string_news">News</string>
    <string name="string_e_paper">E-Paper</string>
    <string name="string_opinion_poll">Opinion Poll</string>
    <string name="string_quiz">Quiz?</string>
    <string name="string_gallery">Gallery</string>
    <string name="string_video">Videos</string>
    <string name="string_punch">Aadab Punch</string>
    <string name="string_view_all">View All</string>
    <string name="string_coming_soon">Coming Soon</string>
</resources>
