<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_background"
    android:padding="@dimen/dimen_16dp">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageview_app_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlayout_news"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginEnd="@dimen/dimen_4dp"
        android:layout_marginRight="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_epaper_background"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@+id/rlayout_epaper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_app_logo">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_epaper" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_news1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_toEndOf="@+id/imageview_news"
            android:layout_toRightOf="@+id/imageview_news"
            android:gravity="center|start"
            android:text="@string/string_news"
            android:textAllCaps="false"
            android:textColor="@color/colorEpaper"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_epaper"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginLeft="@dimen/dimen_4dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_news_background"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rlayout_news"
        app:layout_constraintTop_toBottomOf="@+id/imageview_app_logo">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_epaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_news" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_epaper1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_toEndOf="@+id/imageview_epaper"
            android:layout_toRightOf="@+id/imageview_epaper"
            android:gravity="center|start"
            android:text="@string/string_e_paper"
            android:textAllCaps="false"
            android:textColor="@color/colorNews"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_polling"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginEnd="@dimen/dimen_4dp"
        android:layout_marginRight="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_polling_background"
        android:gravity="center"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@+id/rlayout_quiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlayout_news">



        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_polls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_opinion_new" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_polling"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_toEndOf="@+id/imageview_polls"
            android:layout_toRightOf="@+id/imageview_polls"
            android:gravity="center|start"
            android:text="@string/string_opinion_poll"
            android:textAllCaps="false"
            android:textColor="#DE3126"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_quiz"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginLeft="@dimen/dimen_4dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_quiz_background"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rlayout_polling"
        app:layout_constraintTop_toBottomOf="@+id/rlayout_epaper">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_quiz" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_quiz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_toEndOf="@+id/imageview_quiz"
            android:layout_toRightOf="@+id/imageview_quiz"
            android:gravity="center|start"
            android:text="@string/string_quiz"
            android:textAllCaps="false"
            android:textColor="@color/colorQuiz"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_gallery"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginEnd="@dimen/dimen_4dp"
        android:layout_marginRight="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_gallery_background"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@+id/rlayout_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlayout_polling">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gallery" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_gallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_toEndOf="@+id/imageview_gallery"
            android:layout_toRightOf="@+id/imageview_gallery"
            android:gravity="center|start"
            android:text="@string/string_gallery"
            android:textAllCaps="false"
            android:textColor="@color/colorGallery"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlayout_video"
        android:layout_width="173dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginLeft="@dimen/dimen_4dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_video_background"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rlayout_gallery"
        app:layout_constraintTop_toBottomOf="@+id/rlayout_quiz">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_video" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_toEndOf="@+id/imageview_video"
            android:layout_toRightOf="@+id/imageview_video"
            android:gravity="center|start"
            android:text="@string/string_video"
            android:textAllCaps="false"
            android:textColor="@color/colorVideo"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlayout_punches"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/ic_punch_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlayout_gallery">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageview_punch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ic_punch_new" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textview_punches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_toEndOf="@id/imageview_punch"
            android:layout_toRightOf="@+id/imageview_punch"
            android:gravity="center"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/string_punch"
            android:textAllCaps="false"
            android:textColor="@color/colorPunch"
            android:textSize="18sp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>